--- a/Inventory.Api/appsettings.json
+++ b/Inventory.Api/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "User ID=hunghb;Password=1234;Host=localhost;Port=5432;Database=invertory;Pooling=true;"
+  }
 }
